--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ article { display: none; }
     bottom: 0;
     left: 0;
     width: 100%;
-    background: hsla(240, 1%, 17%, .75);
+    background: hsla(240, 35%, 82%, 0.75);
     backdrop-filter: blur(10px);
     border: 1px solid var(--jet);
     border-radius: 12px 12px 0 0;
@@ -373,7 +373,7 @@ article { display: none; }
 }
 
 .navbar-link {
-    color: var(--light-gray);
+    color: var(--eerie-black2);
     font-size: var(--fs8);
     padding: 20px 7px;
     transition: color var(--transition1);
