--- a/style.css
+++ b/style.css
@@ -232,10 +232,12 @@ article { display: none; }
 }
 
 .sidebar-avatar {
-    width: 40px; /* Adjust the width to make it smaller */
-    height: 40px; /* Adjust the height to make it smaller */
+    width: 50px; /* Adjust the width to make it larger */
+    height: 50px; /* Adjust the height to make it larger */
     border-radius: 50%; /* Ensure it remains a circle */
     overflow: hidden; /* Hide any overflow */
+    margin-right: 10px; /* Add some space to the right */
+    border: 2px solid var(--border-color); /* Add a border for better visibility */
 }
 
 .avatar-box {
@@ -1058,7 +1060,7 @@ textarea.form-input {
 }
 
 .contact-item ion-icon {
-    margin-right: 10px;
+    margin-right: 0px;
 }
 /*MEDIA QUERIES*/
 @media (min-width: 100px) {
