--- a/style.css
+++ b/style.css
@@ -863,14 +863,20 @@ article { display: none; }
     justify-content: space-around;
     align-items: top;
     gap: 10px;
+    
     margin-bottom: 20px;
     flex-direction: row;
     flex-wrap: wrap;
 }
 .playlist-item{
-    background: hsla(240, 35%, 82%, 0.75);
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+        
     padding: 20px;
-    border-radius: 14px;
     box-shadow: var(--shadow2);
     z-index: 1;
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add transition for smooth animation */
