--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
+    
     --bg-gradient-onyx: linear-gradient(to bottom right, #eb455f 3%, #2b3467 97%);
     --bg-gradient-jet: linear-gradient(to bottom right, rgba(235, 69, 95, .251) 3%, rgba(43, 52, 103, 0) 100%), #2b3467;
     --bg-gradient-yellow1: linear-gradient(to bottom right, #fcffe7 0%, rgba(186, 215, 233, 0) 50%);
@@ -8,11 +9,11 @@
     --border-gradient-onyx: linear-gradient(to bottom right, #2b3467 0%, rgba(43, 52, 103, 0) 50%);
     --text-gradient-yellow: linear-gradient(to right, #fcffe7, #eb455f);
     
-    --jet: #2b3467;
+    --jet: #1a202c;
     --onyx: #eb455f;
-    --eerie-black1: #2b3467;
-    --eerie-black2: #2b3467;
-    --smoky-black: #6dacf3;
+    --eerie-black1: #1a202c;
+    --eerie-black2: #1a202c;
+    --smoky-black: #232c61;
     --white1: #ffffff;
     --white2: #fafafa;
     --orange-yellow-crayola: #fcffe7;
